# mokumo

./: .coderabbit.yaml  .dependency-cruiser-known-violations.json  .dependency-cruiser.mjs  .env.example  .env.local.example  .envrc.example  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  .npmrc  .oxlintrc.json  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  LANGUAGE.md  LICENSE  QUALITY.md  README.md  SECURITY.md  crap4rs.toml  crap4ts.config.ts  deny.toml  drizzle.config.ts  eslint.config.mjs  instrumentation.ts  lefthook.yml  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  (+7 more)
apps/desktop/: Cargo.toml  moon.yml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: lib.rs  lifecycle.rs  main.rs
apps/mokumo-desktop/: Cargo.toml  moon.yml  tauri.conf.json
apps/mokumo-desktop/capabilities/: default.json
apps/mokumo-desktop/icons/: icon.icns
apps/mokumo-desktop/src/: lib.rs  lifecycle.rs
apps/mokumo-server/: Cargo.toml  moon.yml
apps/mokumo-server/src/: main.rs
apps/mokumo-server/tests/: cli_backup_restore_binary.rs  cli_reset_db_binary.rs
crates/core/: Cargo.toml  moon.yml
crates/core/src/: error.rs  filter.rs  lib.rs  pagination.rs  setup.rs
crates/core/tests/: bdd.rs
crates/db/: Cargo.toml  moon.yml
crates/db/migrations/: 20260321000000_init.sql  20260322000000_settings.sql  20260324000000_number_sequences.sql  20260324000001_customers_and_activity.sql  20260326000000_customers_deleted_at_index.sql
crates/db/src/: backup.rs  lib.rs  restore.rs
crates/db/tests/: bdd.rs  database_init.rs  entity_drift.rs  first_run.rs  migration_safety.rs  schema_conventions.rs  seaorm_migration.rs  startup_guards.rs  upgrade_path.rs  user_repo.rs
crates/kikan/: CLAUDE.md  Cargo.toml  LANGUAGE.md  build.rs  moon.yml
crates/kikan-admin-ui/: Cargo.toml  moon.yml
crates/kikan-admin-ui/frontend/: .dependency-cruiser.cjs  .gitignore  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
crates/kikan-cli/: Cargo.toml
crates/kikan-cli/src/: backup_cli.rs  format.rs  lib.rs  main.rs  migrate.rs  profile.rs  reset_db.rs  reset_password.rs  restore.rs
crates/kikan-events/: Cargo.toml
crates/kikan-events/src/: bus.rs  error.rs  event.rs  lib.rs  subgraft.rs
crates/kikan-events/tests/: bdd.rs
crates/kikan-mail/: Cargo.toml
crates/kikan-mail/src/: address.rs  config.rs  error.rs  lib.rs  mailer.rs  message.rs
crates/kikan-mail/tests/: bdd.rs
crates/kikan-scheduler/: Cargo.toml
crates/kikan-scheduler/src/: apalis_impl.rs  error.rs  immediate.rs  job.rs  lib.rs  scheduler.rs  subgraft.rs
crates/kikan-scheduler/tests/: bdd.rs
crates/kikan-socket/: Cargo.toml
crates/kikan-socket/src/: lib.rs
crates/kikan-spa-sveltekit/: Cargo.toml
crates/kikan-spa-sveltekit/src/: disk.rs  embedded.rs
crates/kikan-spa-sveltekit/tests/: integration.rs
crates/kikan-tauri/: Cargo.toml
crates/kikan-tauri/src/: lib.rs  net.rs
crates/kikan-types/: Cargo.toml
crates/kikan-types/src/: activity.rs  admin.rs  auth.rs  diagnostics.rs  error.rs  lib.rs  pagination.rs  profile.rs  setup.rs
crates/kikan/src/: actor.rs  app_error.rs  app_handle.rs  boot.rs  control_plane_error.rs  engine.rs  error.rs  graft.rs  lib.rs  platform_state.rs  profile_db.rs  profile_db_tests.rs  rate_limit.rs  slug.rs
crates/kikan/tests/: backfill_tests.rs  bdd.rs  composite_spa_dispatch.rs  control_plane_error_variants.rs  control_plane_purity.rs  cookie_path_invariant.rs  dag_resolver.rs  data_plane_modes.rs  engine_integration.rs  graft_lifecycle_hooks.rs  guard_tests.rs  m00_platform_migrations.rs  migration_conn.rs  migration_replay_snapshot.rs  rate_limit_config.rs  test_graft.rs  user_repo_trait_signature.rs
crates/mokumo-shop/: Cargo.toml  build.rs  moon.yml
crates/mokumo-shop/src/: activity.rs  auth.rs  cli.rs  db.rs  demo_reset.rs  graft.rs  lib.rs  lifecycle.rs  profile_db_init.rs  profile_switch.rs  restore.rs  restore_handler.rs  routes.rs  server_info.rs  settings.rs  setup.rs  startup.rs  state.rs  user_admin.rs
crates/mokumo-shop/tests/: admin_uds.rs  api_bdd.rs  auth_reset_regressions.rs  auth_setup_regressions.rs  bdd.rs  cli_backup.rs  cli_migrate_status.rs  cli_reset_db.rs  cli_reset_password.rs  cli_restore.rs  error_handling.rs  host_allowlist.rs  log_format.rs  platform_bdd.rs  platform_database_init.rs  platform_entity_drift.rs  platform_first_run.rs  platform_migration_safety.rs  platform_schema_conventions.rs  platform_seaorm_migration.rs  platform_startup_guards.rs  platform_upgrade_path.rs  platform_user_repo.rs  port_fallback.rs  schema_equivalence.rs  server_startup.rs
crates/mokumo-spa/: Cargo.toml  moon.yml
crates/mokumo-spa/src/: lib.rs
crates/scorecard/: Cargo.toml  README.md  moon.yml
crates/scorecard/src/: aggregate.rs  coverage_breakouts.rs  emit_schema.rs  lib.rs  schema_postprocess.rs  threshold.rs
crates/scorecard/tests/: bdd.rs  layer2_e2e.rs  schema_drift.rs  trybuild.rs
crates/types/: Cargo.toml
crates/types/src/: activity.rs  auth.rs  customer.rs  diagnostics.rs  error.rs  lib.rs  pagination.rs  settings.rs  setup.rs  user.rs  ws.rs
dbt/: .env.example  .sqlfluff  ARCHITECTURE.md  STYLE_GUIDE.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
dbt/macros/: generate_schema_name.sql
dbt/profiles/: profiles.yml.example
dbt/seeds/: dim_supplier_seed.csv
dbt/snapshots/: snp_supplier_pricing.sql
dbt/tests/: assert_no_overlapping_price_ranges.sql  assert_uniform_prices_within_groups.sql
services/api/: Cargo.toml  build.rs  moon.yml
services/api/src/: admin_uds.rs  backup_status.rs  demo.rs  diagnostics.rs  diagnostics_bundle.rs  discovery.rs  error.rs  graft.rs  graft_bridge.rs  lib.rs  logging.rs  main.rs  pagination.rs  profile_db.rs  profile_switch.rs  restore.rs  server_info.rs  settings.rs  setup.rs
tools/docs-gen/: Cargo.toml  moon.yml
(+1955 files in other folders)
