[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/types",
    "crates/db",
    "services/api",
    "apps/desktop",
]

[workspace.package]
version = "0.1.0"
authors = ["Christopher Bays <cmbays@breezybayslabs.com>"]
edition = "2024"
license = "BUSL-1.1"
repository = "https://github.com/breezy-bays-labs/mokumo"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Auth
axum-login = "0.18"
tower-sessions = { version = "0.14", default-features = false }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
password-auth = "1.0"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

# ORM
sea-orm = { version = "=2.0.0-rc.37", features = ["runtime-tokio", "sqlx-sqlite", "with-chrono"] }
sea-orm-migration = { version = "=2.0.0-rc.37", features = ["runtime-tokio", "sqlx-sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Type sharing
ts-rs = { version = "11", features = ["format", "serde-json-impl"] }

# SPA embedding
rust-embed = { version = "8", features = ["mime-guess"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Process-level file locking
fd-lock = "4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# SQLite direct access (backup version queries)
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Platform directories
directories = "6"
dirs = "6"

# Graceful shutdown
tokio-util = { version = "0.7", features = ["rt"] }

# Tauri desktop shell
tauri = { version = "2", features = ["devtools"] }
tauri-build = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Testing
serial_test = "3"
axum-test = { version = "17", features = ["ws"] }

# Async utilities
futures-util = "0.3"

# Random number generation
rand = "0.9"

# Regex
regex = "1"

# Concurrent data structures
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
rpassword = "7"
cucumber = "0.22"
proptest = "1"
insta = { version = "1", features = ["json", "redactions"] }

# mDNS / LAN discovery
mdns-sd = "0.18"
local-ip-address = "0.6"

# Internal crates
mokumo-core = { path = "crates/core" }
mokumo-types = { path = "crates/types" }
mokumo-db = { path = "crates/db" }
mokumo-api = { path = "services/api" }

[profile.dev.package.argon2]
opt-level = 3
