[workspace]
resolver = "2"
members = [
    "crates/kikan-types",
    "crates/kikan",
    "crates/kikan-tauri",
    "crates/kikan-socket",
    "crates/kikan-cli",
    "crates/kikan-events",
    "crates/kikan-mail",
    "crates/kikan-scheduler",
    "crates/mokumo-shop",
    "crates/kikan-spa-sveltekit",
    "crates/kikan-admin-ui",
    "crates/scorecard",
    "apps/mokumo-desktop",
    "apps/mokumo-server",
    "tools/docs-gen",
]

[workspace.package]
version = "0.1.0"
authors = ["Christopher Bays <cmbays@breezybayslabs.com>"]
edition = "2024"
rust-version = "1.95"
license = "BUSL-1.1"
repository = "https://github.com/breezy-bays-labs/mokumo"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "normalize-path"] }
http = "1"

# Auth
axum-login = "0.18"
tower-sessions = { version = "0.15", default-features = false }
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
password-auth = "1.0"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
    "chrono",
] }

# ORM
sea-orm = { version = "=2.0.0-rc.38", features = ["runtime-tokio", "sqlx-sqlite", "with-chrono"] }
sea-orm-migration = { version = "=2.0.0-rc.38", features = ["runtime-tokio", "sqlx-sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Type sharing
ts-rs = { version = "12", features = ["format", "serde-json-impl"] }

# SPA embedding
rust-embed = { version = "8", features = ["mime-guess"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Process-level file locking
fd-lock = "4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# SQLite direct access (backup version queries)
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Platform directories
directories = "6"
dirs = "6"

# Graceful shutdown
tokio-util = { version = "0.7", features = ["rt"] }

# Tauri desktop shell
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-build = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Testing
serial_test = "3"
axum-test = { version = "20", features = ["ws"] }

# Async utilities
futures-util = "0.3"

# Random number generation
rand = "0.10"

# Regex
regex = "1"

# Image validation
infer = "0.19"
imagesize = "0.14"

# Synchronization
parking_lot = "0.12"

# Concurrent data structures
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
rpassword = "7"
cucumber = "0.23"
proptest = "1"
insta = { version = "1", features = ["json", "redactions"] }

# JSON Schema (scorecard crate)
# schemars 0.8 targets JSON Schema draft 7 and exposes RootSchema.definitions —
# the API used by the Layer 2 post-processing helper in
# crates/scorecard/src/bin/emit-schema.rs. schemars 1.x reorganizes to $defs and
# would require an ADR amendment; see decisions/mokumo/adr-scorecard-crate-shape.md.
schemars = "1.2"
jsonschema = "0.46"
toml = "1.1"
walkdir = "2"
trybuild = "1"

# Per-handler branch coverage producer (`tools/docs-gen --bin coverage-breakouts`,
# mokumo#583). `syn` parses route declarations in `routes.rs` / `router.rs`;
# `rustc-demangle` demangles the v0-mangled function names emitted by
# `cargo-llvm-cov --branch` into Rust paths so the walker output and the
# coverage payload can be joined on identifier equality.
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
rustc-demangle = "0.1"

# mDNS / LAN discovery
mdns-sd = "0.19"
local-ip-address = "0.6"

# Diagnostics
zip = "8"
sysinfo = "0.38"

# Internal crates — leaf utility crates
kikan-types = { path = "crates/kikan-types" }

# Internal crates — kikan platform + mokumo-shop vertical
kikan = { path = "crates/kikan" }
kikan-events = { path = "crates/kikan-events" }
kikan-tauri = { path = "crates/kikan-tauri" }
kikan-socket = { path = "crates/kikan-socket" }
kikan-spa-sveltekit = { path = "crates/kikan-spa-sveltekit" }
kikan-admin-ui = { path = "crates/kikan-admin-ui" }
mokumo-shop = { path = "crates/mokumo-shop" }

# Pedantic clippy at workspace level. Inherited by each member crate via
# `[lints] workspace = true`. The CI clippy invocation in
# `crates/mokumo-shop/moon.yml` already passes `-D warnings`, which escalates
# every lint declared `warn` here into a hard failure — so this acts as an
# AI-agent guardrail against new code introducing pedantic violations.
#
# Each `allow` below corresponds to a category of existing violation that we
# accepted rather than fix in the same PR that turned pedantic on. The
# umbrella tracking issue is mokumo#786 — when a category is fixed, delete
# the line from this list.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Documentation lints — high noise, low payoff per site. Defer.
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_fields_in_debug = "allow"

# Permanent allows — judgment-call lints that have been evaluated and
# deliberately kept off. Each one has a stated reason; do not delete
# without an ADR.
#   too_many_lines: the CRAP scorecard already polices function size
#     (mokumo#762 / scorecard crate). Duplicating the signal here just
#     adds noise per site.
#   module_name_repetitions: canonical noisy lint; rejecting it is
#     standard practice in pedantic-enabled Rust workspaces.
#   struct_excessive_bools / struct_field_names: API shape is a design
#     choice, not a mechanical defect.
#   items_after_statements: hostile to common test-code patterns where a
#     helper struct, impl, or fn is declared inside a #[test] fn near its
#     first use; hoisting harms readability more than co-location does.
too_many_lines = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
items_after_statements = "allow"

[profile.dev.package.argon2]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
# panic = "abort" omitted: Axum runs inside the Tauri process — an abort-on-panic would
# kill the entire desktop window with no recovery on any handler or background-task panic.
# Re-evaluate if the headless server is ever split into a fully separate process.
