[project]
name = "print-4ink-analytics"
version = "0.1.0"
description = "dbt analytics layer for Screen Print Pro (4Ink)"
requires-python = ">=3.12"
dependencies = [
    "dbt-core",
    "dbt-postgres",
]

[project.optional-dependencies]
dev = ["sqlfluff", "sqlfluff-templater-dbt"]

[dependency-groups]
dev = [
    "dbt-mcp",
    "sqlfluff",
    "sqlfluff-templater-dbt",
]
