[package]
name = "mokumo-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mokumo Print — desktop application"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri
tauri = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-notification = { workspace = true }

# Shared server library
mokumo-api = { workspace = true }
mokumo-core = { workspace = true }
mokumo-db = { workspace = true }
mokumo-types = { workspace = true }

# Async runtime (TcpListener type from try_bind)
tokio = { workspace = true }

# Graceful shutdown
tokio-util = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Axum (for axum::serve in the spawned server task)
axum = { workspace = true }

# LAN IP detection (for tray tooltip)
local-ip-address = { workspace = true }
