[package]
name = "mokumo-desktop"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Mokumo Print — desktop application"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri
tauri = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-notification = { workspace = true }

# Shared server library
mokumo-core = { workspace = true }
mokumo-shop = { workspace = true }
kikan-types = { workspace = true }
kikan = { workspace = true }
kikan-events = { workspace = true }
kikan-spa-sveltekit = { workspace = true }
kikan-admin-ui = { workspace = true }
kikan-tauri = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Used via the embedded SPA derive below.
rust-embed = { workspace = true }

# Async runtime (TcpListener type from try_bind)
tokio = { workspace = true }

# SeaORM (DatabaseConnection type — boot pools are pre-built here)
sea-orm = { workspace = true }

# Graceful shutdown
tokio-util = { workspace = true }
tower-sessions = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Axum (for axum::serve in the spawned server task)
axum = { workspace = true }

# LAN IP detection (for tray tooltip)
local-ip-address = { workspace = true }
