[package]
name = "mokumo-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mokumo headless server — zero Tauri dependencies (see ADR: adr-workspace-split-kikan I3)"

# NO tauri dependency here, direct or transitive.
# Verify: cargo tree -p mokumo-server | grep tauri  (must exit non-zero)
[dependencies]
kikan = { workspace = true }
kikan-socket = { workspace = true }
kikan-cli = { path = "../../crates/kikan-cli" }
kikan-types = { workspace = true }
mokumo-api = { path = "../../services/api", default-features = false }
mokumo-shop = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
directories = { workspace = true }
fd-lock = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
