[package]
name = "mokumo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
tokio = { workspace = true }

[features]
bdd = []

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]
