[package]
name = "mokumo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

