[package]
name = "mokumo-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
mokumo-core = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
cucumber = { workspace = true }

[features]
bdd = []

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]
