[package]
name = "kikan-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kikan admin CLI library — UDS HTTP client + subcommand dispatch"

[dependencies]
kikan = { workspace = true }
kikan-types = { workspace = true }
axum = { workspace = true }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
bytes = "1"
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
password-auth = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lib]
name = "kikan_cli"
path = "src/lib.rs"
