[package]
name = "kikan-scheduler"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kikan async job scheduler — apalis wrapper with Scheduler trait"

[dependencies]
async-trait = "0.1"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tokio-util = { workspace = true, features = ["rt"] }
apalis = "=1.0.0-rc.7"
apalis-sqlite = "=1.0.0-rc.7"
sqlx = { workspace = true }
kikan = { path = "../kikan" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3"
cucumber = { workspace = true }

[features]
bdd = []

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]

[lints]
workspace = true
