[package]
name = "kikan-spa-sveltekit"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kikan SvelteKit SPA primitive — embedded (rust-embed) and on-disk (tower-http) SpaSource implementations"

[dependencies]
axum = { workspace = true }
kikan = { workspace = true }
rust-embed = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
http = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
