[package]
name = "kikan-tauri"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kikan Tauri IPC adapter — thin #[tauri::command] wrappers over kikan::platform handlers"

[dependencies]
kikan = { workspace = true }
# `tauri` is aspirational — #[tauri::command] wrappers land in Stage 4.
# Keeping it out of [dependencies] until then avoids dragging `glib-sys` /
# `libglib2.0-dev` into CI hosts that only build the Linux headless slice
# (services/api dev-deps kikan-tauri for BDD; see services/api/Cargo.toml).
tokio = { workspace = true }
tracing = { workspace = true }
