[package]
name = "kikan-tauri"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Helpers specific to the Tauri desktop shell (ephemeral-port binding, etc.)"

[dependencies]
kikan = { workspace = true }
# No `tauri` dep — per `adr-tauri-http-not-ipc` + `adr-kikan-binary-topology`,
# Mokumo uses real HTTP (and UDS for admin), not `#[tauri::command]` IPC.
# The Tauri runtime lives in `apps/mokumo-desktop`; this crate only needs
# shell-specific helpers, which compile without pulling `glib-sys` /
# `libglib2.0-dev` into headless CI slices.
# (mokumo-shop dev-deps kikan-tauri for the BDD ephemeral-bind steps; see
# crates/mokumo-shop/Cargo.toml.)
tokio = { workspace = true }
tracing = { workspace = true }
