[package]
name = "kikan-types"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
mokumo-core = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
proptest = { workspace = true }
