[package]
name = "kikan-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
