[package]
name = "kikan"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kikan — self-hosted Rust application platform core"

[dependencies]
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
axum-login = { workspace = true }
http = { workspace = true }
rusqlite = { workspace = true }
async-trait = "0.1"
trait-variant = "0.1"
chrono = { workspace = true }
time = { workspace = true }
password-auth = { workspace = true }
rand = { workspace = true }

# Transitional: kikan temporarily depends on mokumo-core for ActivityAction,
# ActivityEntry, DomainError, PageParams, and the ActivityLogRepository port.
# These types migrate fully to kikan in later Stage 3 sessions; the edge is
# removed when core dissolves.
mokumo-core = { path = "../core" }

[dev-dependencies]
proptest = { workspace = true }
cucumber = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }

[features]
bdd = []

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]
