[package]
name = "kikan"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kikan — self-hosted Rust application platform core"

[dependencies]
anyhow = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
kikan-types = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
axum-login = { workspace = true }
http = { workspace = true }
rusqlite = { workspace = true }
async-trait = "0.1"
trait-variant = "0.1"
chrono = { workspace = true }
time = { workspace = true }
password-auth = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
mdns-sd = { workspace = true }
sysinfo = { workspace = true }
zip = { workspace = true }
regex = { workspace = true }

# Transitional: kikan temporarily depends on mokumo-core for ActivityAction,
# ActivityEntry, DomainError, PageParams, and the ActivityLogRepository port.
# These types migrate fully to kikan in later Stage 3 sessions; the edge is
# removed when core dissolves.
mokumo-core = { path = "../core" }

[dev-dependencies]
proptest = { workspace = true }
cucumber = { workspace = true }
# Dev-only reverse dep: kikan integration tests need the mokumo vertical's
# migrator + setup seed to stand up a realistic profile DB. Cargo tolerates
# dev-dep cycles; this edge is excluded from I4's
# `cargo tree --edges normal,build` gate.
mokumo-shop = { workspace = true }
sqlx = { workspace = true }
serial_test = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }

[features]
bdd = []

[[test]]
name = "bdd"
harness = false
required-features = ["bdd"]
