[package]
name = "mokumo-shop"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mokumo shop vertical — neutral shop-core primitives (customers, shops, sequences, quotes, invoices, kanban, inventory, pricing, financials)"

[dependencies]
kikan = { workspace = true }
kikan-types = { workspace = true }
mokumo-core = { workspace = true }
sea-orm = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
axum-login = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
ts-rs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
cucumber = { workspace = true }
mokumo-db = { workspace = true }
sqlx = { workspace = true }
tempfile = "3"
tower = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

